Corregi el carrusel del inicio, arme bien la sección de profesionales, en ambas secciones resalte los textos y demás; corregí el background de los titulos de todas las páginas

--- a/Contacto.html
+++ b/Contacto.html
@@ -42,21 +42,23 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="profesionales.html">Profesionales</a>
+                <a class="nav-link" href="./profesionales.html"
+                  >Profesionales</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="tratamientos.html">Tratamientos</a>
+                <a class="nav-link" href="./tratamientos.html">Tratamientos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="valores.html">Valores</a>
+                <a class="nav-link" href="./valores.html">Valores</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="contacto.html">Contacto</a>
+                <a class="nav-link active" href="./contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
@@ -64,14 +66,14 @@
       </nav>
     </header>
     <main>
-      <div class="titulo">
+      <div class="contenedor_titulo">
         <!--Titulo-->
-        <h1>CONTACTO</h1>
+        <h1 class="titulo">CONTACTO</h1>
       </div>
       <div class="row">
         <form action="a">
           <fieldset class="formulario">
-            <legend class="legend">Información</legend>
+            <legend class="legend">INFORMACION</legend>
             <!-- Radio button -->
             <div class="margen-arriba-y-abajo">
               <label class="margen-izquierda" for="Masculino">Masculino</label>
