--- a/Profesionales.html
+++ b/Profesionales.html
@@ -69,105 +69,73 @@
       </nav>
     </header>
     <main>
-      <div class="titulo">
-        <h1>PROFESIONALES</h1>
+      <div class="contenedor_titulo">
+        <h1 class="titulo">PROFESIONALES</h1>
         <!--Título-->
       </div>
       <div class="container">
         <!--Profesionales, dividos por columnas de 6-->
-        <section class="row">
-          <div class="col-md-6">
+        <section class="row contenedor_profesionales">
+          <div class="col-md-6 contenedor_profesional">
             <!--Primer profesional-->
-            <div>
+            <div class="contenedor_elementos">
+              <img src="./fotos/persona1.jpg" alt="Odontologa" class="imagen" />
+            </div>
+            <div class="contenedor_elementos">
               <h3>Adriana Lobosco</h3>
             </div>
-            <div>
-              <img
-                src="Fotos/Odontologa 1.jpg"
-                alt="Odontologa"
-                width="300"
-                height="200"
-              />
-            </div>
-            <div>
-              <ul>
-                <li>Odontóloga</li>
-                <li>MP.23505 / MN. 26732</li>
-                <li>Recibida en UBA / Año 1999</li>
-                <li>
-                  Especialidad en Odontología general, con niños y personas con
-                  discapacidad
-                </li>
-              </ul>
+            <div class="contenedor_elementos">
+              <p class="text-center">
+                Odontóloga, MP.23505 / MN. 26732, Recibida en UBA en el Año
+                1999. Especialidad en Odontología general, con niños y personas
+                con discapacidad
+              </p>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 contenedor_profesional">
             <!--Segundo profesional-->
-            <div>
-              <h3>Rocio Fernandez Furnari</h3>
+            <div class="contenedor_elementos">
+              <img src="./fotos/persona2.jpg" alt="Odontologo" class="imagen" />
             </div>
-            <div>
-              <img
-                src="fotos/Odontologo 2.jpg"
-                alt="Odontologo"
-                width="300"
-                height="200"
-              />
+            <div class="contenedor_elementos">
+              <h3>Juan Fernandez</h3>
             </div>
-            <div>
-              <ul>
-                <li>Odontóloga</li>
-                <li>MP. 25103</li>
-                <li>Recibida en UBA / Año 2010</li>
-                <li>Especialidad en Odontología General y Odontopediatria</li>
-              </ul>
+            <div class="contenedor_elementos">
+              <p class="text-center">
+                Odontologo, MP. 25103, Recibido en UBA en el Año 2010.
+                Especialista en Odontología General y Odontopediatria
+              </p>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 contenedor_profesional">
             <!--Tercer profesional-->
-            <div>
-              <h3>Dina Marianela Rodríguez</h3>
+            <div class="contenedor_elementos">
+              <img src="./fotos/persona3.jpg" alt="Odontologo" class="imagen" />
             </div>
-            <div>
-              <img
-                src="fotos/odontologo 3.jpg"
-                alt="Odontologo"
-                width="300"
-                height="200"
-              />
+            <div class="contenedor_elementos">
+              <h3>Dina Rodríguez</h3>
             </div>
-            <div>
-              <ul>
-                <li>Ortodoncista</li>
-                <li>MP. 24198 / MN. 260603</li>
-                <li>Recibida en UNNE / Año 2002</li>
-                <li>
-                  Especialidad en Odontopediatria, Ortodoncia y Ortopedia de los
-                  maxilares
-                </li>
-              </ul>
+            <div class="contenedor_elementos">
+              <p class="text-center">
+                Ortodoncista con MP. 24198 / MN. 260603, Recibida en UNNE en el
+                Año 2002. Especialidad en Odontopediatria, Ortodoncia y
+                Ortopedia de los maxilares
+              </p>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 contenedor_profesional">
             <!--Cuarto profesional-->
-            <div>
-              <h3>Carolina Inés Nuñez</h3>
+            <div class="contenedor_elementos">
+              <img src="./fotos/persona4.jpg" alt="Odontologa" class="imagen" />
             </div>
-            <div>
-              <img
-                src="fotos/Odontologa 4.jpeg"
-                alt="Odontologa"
-                width="300"
-                height="200"
-              />
+            <div class="contenedor_elementos">
+              <h3>Carolina Nuñez</h3>
             </div>
-            <div>
-              <ul>
-                <li>Odontóloga</li>
-                <li>MP. 32315</li>
-                <li>Recibida en UBA / Año 1999</li>
-                <li>Especialidad en Endodoncia</li>
-              </ul>
+            <div class="contenedor_elementos">
+              <p class="text-center">
+                Odontóloga con >MP. 32315, Recibida en UBA en el Año 1999.
+                Especialista en Endodoncia
+              </p>
             </div>
           </div>
         </section>
