--- a/Valores.html
+++ b/Valores.html
@@ -64,9 +64,9 @@
       </nav>
     </header>
     <main>
-      <div class="titulo">
+      <div class="contenedor_titulo">
         <!--Titulo-->
-        <h1>VALORES</h1>
+        <h1 class="titulo">VALORES</h1>
       </div>
       <div>
         <!--Secciones en col de valores-->
