--- a/Tratamientos.html
+++ b/Tratamientos.html
@@ -68,13 +68,12 @@
         </div>
       </nav>
     <main>
-      <div class="titulo">
-        <!--Titulo-->
-        <h1>TRATAMIENTOS</h1>
+      <div class="contenedor_titulo"> <!--Titulo-->
+        <h1 class="titulo">TRATAMIENTOS</h1>
       </div>
       <section class="container contenedor">
         <!--Contenedores de tabla-->
-        <table class="table table-dark table-striped">
+        <table class="table table-light table-striped">
           <!--Estilo de tabla-->
           <thead>
             <!--Encabezado tabla-->
