Home and Profesionales have been completed; Agregué variables generales

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
         <section class="historia">
           <div class="row textos">
             <article class="col-md-5">
-              <h2 class="paddinghistoria">Historia Odontología</h2>
-              <p class="textohistoria">
+              <h2 class="titulo_historia">Historia Odontología</h2>
+              <p class="texto_historia">
                 La Historia se ocupa de darnos a conocer la existencia de las
                 enfermedades de la boca, su antigüedad, pero sobre todo cuáles
                 han sido las creencias de los humanos a lo largo de los siglos
@@ -185,8 +185,8 @@
               </p>
             </article>
             <article class="col-md-5">
-              <h2 class="paddinghistoria">Historia Empresa</h2>
-              <p class="textohistoria">
+              <h2 class="titulo_historia">Historia Empresa</h2>
+              <p class="texto_historia">
                 El término odontólogo deriva del griego odont(o) (ὀδο-ύς/-ντος),
                 que en español significa diente. Dentista proviene del latín
                 dents, dentis, que en español significa diente. Se puede definir
@@ -222,7 +222,7 @@
     <!--Pie de página con información-->
     <footer>
       <div>
-        <h2>Información</h2>
+        <h3>INFORMACION</h3>
       </div>
       <div class="info">
         <div>
