--- a/Profesionales.html
+++ b/Profesionales.html
@@ -140,9 +140,9 @@
           </div>
         </section>
       </div>
-      <div class="volver">
+      <div>
         <!--Volver a la página de inicio-->
-        <h4><a href="index.html"> Volver </a></h4>
+        <h4 class="volver"><a href="index.html"> Volver </a></h4>
       </div>
     </main>
     <script
