Trabajo final terminado, ultimas modificaciones en Contacto, tratamientos y valores

--- a/Tratamientos.html
+++ b/Tratamientos.html
@@ -71,7 +71,7 @@
       <div class="contenedor_titulo"> <!--Titulo-->
         <h1 class="titulo">TRATAMIENTOS</h1>
       </div>
-      <section class="container contenedor">
+      <section class="container contenedor table-responsive">
         <!--Contenedores de tabla-->
         <table class="table table-light table-striped">
           <!--Estilo de tabla-->
