--- a/Valores.html
+++ b/Valores.html
@@ -70,77 +70,77 @@
       </div>
       <div>
         <!--Secciones en col de valores-->
-        <section class="row container">
-          <!--Texto ocupando 4 columnas-->
-          <div class="col-md-4">
-            <h4 class="subtitulo">
-              Respeto por los Deseos y Necesidades de un Paciente
-            </h4>
-            <p>
-              Como paciente, tienes el derecho a ser involucrado en las
-              decisiones sobre el tratamiento y a esperar privacidad y
-              confidencialidad. "El código recuerda a todos los dentistas que
-              tienen la obligación de poner al paciente primero, a involucrarlo
-              en las decisiones sobre el tratamiento de una forma significativa
-              y a tratar al paciente teniendo en cuenta sus deseos, siempre que
-              esos deseos estén dentro de los límites de tratamiento aceptado”,
-              dice la Dra Linda Himmelberger.
-            </p>
-          </div>
-          <!--Texto ocupando 4 columnas-->
-          <div class="col-md-4">
-            <h4 class="subtitulo">No Hacer Daño</h4>
-            <p>
-              La obligación de tu dentista es mantenerte sano y seguro. Parte de
-              ello es mantener sus conocimientos y habilidades actualizadas y
-              referirte a especialistas cuando sea necesario. “No ‘Hacer Daño’
-              es realmente la Regla de Oro”, dice la Dra. Jane Gillette. “Los
-              dentistas practican ‘No Hacer Daño’ de muchas maneras, pero una
-              expresión universal es su dedicación a mantener conocimientos y
-              habilidades al día. Nuevos conocimientos científicos y nuevas
-              tecnologías pueden surgir rápidamente. Como respuesta, los
-              dentistas completan un tremendo número de horas en educación
-              continua anualmente para proveer a sus pacientes con el más alto
-              nivel de atención eficaz y segura basada en conocimientos
-              científicos”.
-            </p>
-          </div>
-          <!--Texto ocupando 4 columnas-->
-          <div class="col-md-4">
-            <h4 class="subtitulo">Hacer el Bien</h4>
-            <p>
-              Esto significa que tu dentista provee tratamiento de alta calidad
-              y a tiempo, a la vez que tiene en cuenta tus necesidades, deseos y
-              valores. “Hacer el bien para un dentista significa tratar a cada
-              paciente como un individuo y hacer cualquier cosa que sea en su
-              mejor interés. Discutimos opciones de tratamiento juntos para
-              llegar a un acuerdo sobre qué es lo mejor”, dice la Dra. Cathleen
-              Taylor-Osborne, Directora de la Oficina de Salud Oral de la
-              Agencia de Salud y Medio Ambiente de Kansas. “Es importante
-              también aplicar pruebas científicas al bien público, como la
-              fluoración”.
-            </p>
-          </div>
-          <!--Texto ocupando 4 columnas-->
-          <div class="col-md-4">
-            <h4 class="subtitulo">Imparcialidad</h4>
-            <p>
-              Tu dentista no discrimina y proveerá cuidado dental sin
-              prejuicios. “Todo el mundo es tratado de forma justa, sin importar
-              raza, credo, religión, trasfondo socioeconómico, etnia o
-              condiciones de salud actuales”, dice la Dra. Taylor-Osborne.
-            </p>
-          </div>
-          <!--Texto ocupando 4 columnas-->
-          <div class="col-md-4">
-            <h4 class="subtitulo">Honradez</h4>
-            <p>
-              Las mejores relaciones doctor-paciente se basan en la confianza y
-              en la honestidad. “La honradez en el tratamiento es vital”, dice
-              la Dra. Taylor-Osborne. “Una vez que tu dentista y tú tienen esa
-              confianza, pueden ser socios, lo que ayudará a ambos a ganar mucho
-              terreno para avanzar”.
-            </p>
+        <section class="container">
+          <div class="row contenedor_general">
+            <!--Texto ocupando 4 columnas-->
+            <div class="col-md-5 contenedor_subtitulo">
+              <h4 class="subtitulo">No Hacer Daño</h4>
+              <p class="text-center texto">
+                La obligación de tu dentista es mantenerte sano y seguro. Parte
+                de ello es mantener sus conocimientos y habilidades actualizadas
+                y referirte a especialistas cuando sea necesario. “No ‘Hacer
+                Daño’ es realmente la Regla de Oro”, dice la Dra. Jane Gillette.
+                “Los dentistas practican ‘No Hacer Daño’ de muchas maneras, pero
+                una expresión universal es su dedicación a mantener
+                conocimientos y habilidades al día. Nuevos conocimientos
+                científicos y nuevas tecnologías pueden surgir rápidamente. Como
+                respuesta, los dentistas completan un tremendo número de horas
+                en educación continua anualmente para proveer a sus pacientes
+                con el más alto nivel de atención eficaz y segura basada en
+                conocimientos científicos”.
+              </p>
+            </div>
+            <!--Texto ocupando 4 columnas-->
+            <div class="col-md-5 contenedor_subtitulo">
+              <h4 class="subtitulo">Hacer el Bien</h4>
+              <p class="text-center texto">
+                Esto significa que tu dentista provee tratamiento de alta
+                calidad y a tiempo, a la vez que tiene en cuenta tus
+                necesidades, deseos y valores. “Hacer el bien para un dentista
+                significa tratar a cada paciente como un individuo y hacer
+                cualquier cosa que sea en su mejor interés. Discutimos opciones
+                de tratamiento juntos para llegar a un acuerdo sobre qué es lo
+                mejor”, dice la Dra. Cathleen Taylor-Osborne, Directora de la
+                Oficina de Salud Oral de la Agencia de Salud y Medio Ambiente de
+                Kansas. “Es importante también aplicar pruebas científicas al
+                bien público, como la fluoración”.
+              </p>
+            </div>
+            <!--Texto ocupando 4 columnas-->
+            <div class="col-md-5 contenedor_subtitulo">
+              <h4 class="subtitulo">Imparcialidad</h4>
+              <p class="text-center texto">
+                Tu dentista no discrimina y proveerá cuidado dental sin
+                prejuicios. “Todo el mundo es tratado de forma justa, sin
+                importar raza, credo, religión, trasfondo socioeconómico, etnia
+                o condiciones de salud actuales”, dice la Dra. Taylor-Osborne.
+              </p>
+            </div>
+            <!--Texto ocupando 4 columnas-->
+            <div class="col-md-5 contenedor_subtitulo">
+              <h4 class="subtitulo">Honradez</h4>
+              <p class="text-center texto">
+                Las mejores relaciones doctor-paciente se basan en la confianza
+                y en la honestidad. “La honradez en el tratamiento es vital”,
+                dice la Dra. Taylor-Osborne. “Una vez que tu dentista y tú
+                tienen esa confianza, pueden ser socios, lo que ayudará a ambos
+                a ganar mucho terreno para avanzar”.
+              </p>
+            </div>
+            <div class="col-md-5 contenedor_subtitulo">
+              <h4 class="ultimo_subtitulo_1">Respeto por los Deseos y</h4>
+              <h4 class="ultimo_subtitulo_2">Necesidades de un Paciente</h4>
+              <p class="text-center texto">
+                Como paciente, tienes el derecho a ser involucrado en las
+                decisiones sobre el tratamiento y a esperar privacidad y
+                confidencialidad. "El código recuerda a todos los dentistas que
+                tienen la obligación de poner al paciente primero, a
+                involucrarlo en las decisiones sobre el tratamiento de una forma
+                significativa y a tratar al paciente teniendo en cuenta sus
+                deseos, siempre que esos deseos estén dentro de los límites de
+                tratamiento aceptado”, dice la Dra Linda Himmelberger.
+              </p>
+            </div>
           </div>
         </section>
       </div>
