Corregi la ruta de las imagenes

--- a/Profesionales.html
+++ b/Profesionales.html
@@ -27,7 +27,7 @@
         <div class="container-fluid navegacion">
           <!--Logo-->
           <a class="navbar-brand" href="./index.html"
-            ><img src="./Fotos/Logo.jpg" alt="Logo" class="logo"
+            ><img src="./fotos/logo.jpg" alt="Logo" class="logo"
           /></a>
           <!--Menú hamburguesa-->
           <button
