--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container-fluid navegacion">
           <!--Logo-->
           <a class="navbar-brand" href="./index.html"
-            ><img src="./fotos/logo.jpg" alt="logo" class="logo"
+            ><img src="/fotos/logo.jpg" alt="logo" class="logo"
           /></a>
           <button
             class="navbar-toggler"
@@ -49,16 +49,16 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="profesionales.html">Profesionales</a>
+                <a class="nav-link" href="/profesionales.html">Profesionales</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="tratamientos.html">Tratamientos</a>
+                <a class="nav-link" href="/tratamientos.html">Tratamientos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="valores.html">Valores</a>
+                <a class="nav-link" href="/valores.html">Valores</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="/contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
@@ -105,7 +105,7 @@
               <!--Imagenes del Carrusel-->
               <div class="carousel-item active">
                 <img
-                  src="./fotos/adriana y dina 2.jpg"
+                  src="/fotos/adriana y dina 2.jpg"
                   class="d-block w-100 imagen"
                   alt="Profesionales"
                 />
@@ -119,7 +119,7 @@
               </div>
               <div class="carousel-item">
                 <img
-                  src="./fotos/consultorio odontologico 2.jpg"
+                  src="/fotos/consultorio odontologico 2.jpg"
                   class="d-block w-100 imagen"
                   alt="Consultorio"
                 />
