--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/profesionales.html">Profesionales</a>
+                <a class="nav-link" href="/Profesionales.html">Profesionales</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/tratamientos.html">Tratamientos</a>
+                <a class="nav-link" href="/Tratamientos.html">Tratamientos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/valores.html">Valores</a>
+                <a class="nav-link" href="/Valores.html">Valores</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contacto.html">Contacto</a>
+                <a class="nav-link" href="/Contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
