--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a class="nav-link" href="/Tratamientos.html">Tratamientos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/valores.html">Valores</a>
+                <a class="nav-link" href="/Valores.html">Valores</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/Contacto.html">Contacto</a>
